extra body gap for header fixed

--- a/themes/indigo-wine/less/_home.less
+++ b/themes/indigo-wine/less/_home.less
@@ -81,17 +81,23 @@ body{
 // NAVIGATION -----------
 // ---------------------------
 
+#header-inner{
+	height: auto !important;
+}
+
 
 #header-inner-bg{
 	border: 0;
     background-color: transparent;
     min-height: 140px;
+    position: relative;
 }
 
 #main-content{
-	margin-top: 4em;
+	// margin-top: 4em;
+	padding-top: 0;
 	@media screen and (max-width: 1400px){
-		margin-top: 2em;
+		// margin-top: 2em;
 	}
 }
 
