--- a/themes/indigo-wine/less/_woocommerce.less
+++ b/themes/indigo-wine/less/_woocommerce.less
@@ -7,7 +7,7 @@
 }
 
 #hb-page-title {
-    padding-top: 100px;
+    // padding-top: 100px;
     margin-top: 0;
 }
 .hb-animate-element {
